# python-dockerfile-example

./: Dockerfile  docker-compose.yaml  pyproject.toml
